# Nimbus_Finance1

./: .eslintrc.cjs  .gitignore  .prettierrc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: middleware.ts  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx  styles.css
apps/web/components/: DonutArea.tsx  DonutAreaAdapter.tsx  MerchantBreakdown.tsx  OverviewClient.tsx
apps/web/lib/: db.ts  entitlements.ts  prune.ts  queue.ts  state.ts  worker.ts
apps/web/public/: demo.csv
apps/web/tests/: health.spec.ts
tools/anonymize/: from-last-upload.ts
tools/harvester/: package.json  tsconfig.json  tsconfig.tsbuildinfo
tools/harvester/src/: cli.ts
tools/scripts/: parse-demo.mjs
tools/ultimate-csv/: .gitignore  LICENSE  README.md  SECURITY.md  SPEC.md
tools/ultimate-csv/.github/: ISSUE_TEMPLATE.md
tools/ultimate-csv/common/: BANK_PROFILES.yaml  SCHEMA.json
tools/ultimate-csv/cpp/: CMakeLists.txt
tools/ultimate-csv/docker/: compose.yaml  cpp.Dockerfile  go.Dockerfile  node.Dockerfile  python.Dockerfile
tools/ultimate-csv/go/: go.mod
tools/ultimate-csv/node/: package.json  tsconfig.json
tools/ultimate-csv/python/: pyproject.toml
tools/ultimate-csv/python/tests/: test_pipeline.py  test_registry.py
tools/ultimate-csv/python/ultimate_csv/: __init__.py  categorize.py  cli.py  dedupe.py  detect.py  http.py  io_stream.py  normalize.py  registry.py
tools/ultimate-csv/registry/: README.md  profiles_index.json  sync_registry.py  (+1 more)
(+54 files in other folders)
